Fix Overflow-x

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
     grid-template-rows: 1fr 6fr;
     height: 100vh;
     width: 100vw;
+    overflow-x: hidden;
 }
 
 .header {
